First working draft

--- a/addons/pycolytics-godot/plugin.cfg
+++ b/addons/pycolytics-godot/plugin.cfg
@@ -1,6 +1,6 @@
 [plugin]
 
-name="pycolythics-godot"
+name="pycolytics-godot"
 description="Event logging to a pycolythics backend"
 author="Dávid Kerekes"
 version="1.0"
