Add event queue, basic readme

--- a/addons/pycolytics-godot/plugin.cfg
+++ b/addons/pycolytics-godot/plugin.cfg
@@ -1,7 +1,9 @@
 [plugin]
 
 name="pycolytics-godot"
-description="Event logging to a pycolythics backend"
+description="A Godot 4.x plugin for interfacing with pycolytics. It provides anonymized event logging with a single function call.
+
+Pycolytics is a tiny open source tool, made to collect software usage statistics with the least amount of hassle possible."
 author="Dávid Kerekes"
 version="1.0"
 script="plugin.gd"
