Forgot plugin config description.

--- a/addons/pycolytics-godot/plugin.cfg
+++ b/addons/pycolytics-godot/plugin.cfg
@@ -1,9 +1,7 @@
 [plugin]
 
 name="pycolytics-godot"
-description="A Godot 4.x plugin for interfacing with pycolytics. It provides anonymized event logging with a single function call.
-
-Pycolytics is a tiny open source tool, made to collect software usage statistics with the least amount of hassle possible."
+description="A Godot plugin for interfacing with pycolytics, a tiny open source event logging webservice. It provides anonymized event logging over the internet."
 author="Dávid Kerekes"
 version="1.0"
 script="plugin.gd"
